# MCPTools

./: README.md  deploy.sh  launch_terminal.sh  permission_config.json  pyproject.toml  requirements.txt  terminal_server.py
tests/: test_permissions.py
